--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,13 +2,13 @@
 <Jumbo>
   <h2>Welcome to Super Rentals!</h2>
   <p>We hope you find exactly what you're looking for in a place to stay.</p>
-  <LinkTo @route="about" class="button">About Us</LinkTo>
+  <LinkTo @route='about' class='button'>About Us</LinkTo>
 </Jumbo>
 
-<div class="rentals">
-  <ul class="results">
-    <li><Rental /></li>
-    <li><Rental /></li>
-    <li><Rental /></li>
+<div class='rentals'>
+  <ul class='results'>
+    {{#each @model as |rental|}}
+      <li><Rental @rental={{rental}} /></li>
+    {{/each}}
   </ul>
 </div>
