--- a/app/components/rental/detailed.hbs
+++ b/app/components/rental/detailed.hbs
@@ -12,7 +12,7 @@
 
 <article class="rental detailed">
   <Rental::Image
-    src={{@rental.image}}
+    src="https://{{@rental.image}}"
     alt="A picture of {{@rental.title}}"
   />
 
